--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="#ex-ed">Education/Experience</a></li>
+        <li><a href="#ex-ed">Education</a></li>
+        <li><a href="#ex-ed">Experience</a></li>
       </ul>
     </div>
   </section>
